--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@types/node": "^18.15.11",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^2.51.5",
 		"postcss": "^8.4.21",
